# horario-saes

./: .gitignore  AGENTS.md  HorarioSAES.spec  README.md  horario.cmd  pyproject.toml  requirements.txt
.github/workflows/: build.yml
horario_saes/: config.py  main.py
horario_saes/modulos/: colors.py  dialogos.py  document_loader.py  exportar.py  iconos.py  modelo.py  parser_saes.py  reloj.py  saes.py
