[project]
name = "horario-saes"
version = "1.0.0"
description = "Armador de horarios para el SAES: ramas, créditos, equivalencias y export a PDF/PNG"
requires-python = ">=3.10"
dependencies = ["pillow>=10", "requests", "beautifulsoup4"]

[project.gui-scripts]
horario = "horario_saes.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["horario_saes*"]
